fixed overflow of multi select  and added select input track

--- a/client/src/sass/accounts.scss
+++ b/client/src/sass/accounts.scss
@@ -416,3 +416,9 @@ $primary-color: #0062FF;
 
     }
 }
+
+.account-view-account-overview {
+    .footer {
+        justify-content: flex-end;
+    }
+}
